--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,17 @@ repos:
         name: "ruff for tiledbsoma_ml"
         args: ["--config=pyproject.toml"]
 
+  - repo: https://github.com/PyCQA/docformatter
+    rev: 06907d0  # https://github.com/PyCQA/docformatter/pull/287
+    hooks:
+      - id: docformatter
+        args: [
+          --wrap-summaries=120,
+          --wrap-descriptions=120,
+          --style=numpy,
+          --in-place
+        ]
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.12.0
     hooks:
